[package]
name = "kraken"
version = "0.1.0"
edition = "2024"
authors = ["José Sánchez-Gallego <gallegoj@uw.edu>"]
description = "A CLI tool to release new versions of projects."

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.41", features = ["derive"] }
clap-cargo = "0.16.0"
colored = "3.0.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.2"
version-compare = "0.2.0"
