[project]
name = "lvmgort"
version = "1.11.0"
description = "The brains of LVM observing"
authors = [ { name = "José Sánchez-Gallego", email = "gallegoj@uw.edu" } ]
license = { text = "BSD-3-Clause" }
requires-python = ">=3.10,<4"

dependencies = [
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = ["src/gort"]

[tool.hatch.build.targets.wheel]
packages = ["src/gort"]

[kraken]
changelog_date_format = "auto"
changelog_path = "CHANGELOG.md"
